mobile-styles.css
#mobileDrawerToggle {
    display: none;
}

@media (max-width: 768px) {
    body {
        overflow: auto;
    }

    .aboutDiv {
        position: fixed;
        width: 90%;
    }

    .graphContainer {
        position: fixed;
        top: 0;
        left: 0;
        border-radius: 0;
        border-bottom: 2px solid #ffc66d;
    }

    .container {
        position: absolute;
        top: 55%;
        left: 5%;
        height: 125%;
        width: 90%;
        border: 1px solid #999;
        border-radius: 10px;
    }

    .resultLog {
        position: absolute;
        top: 180%;
        left: 5%;
        height: fit-content;
        width: 90%;
        border: none;
        margin-top: 2rem;
        border: 1px solid #999;
        border-radius: 10px;
    }

    svg {
        touch-action: none;
        /* Prevents native scroll/zoom */
        user-select: none;
        /* Prevents text selection */
        -webkit-user-select: none;
        /* Safari support */
        -webkit-touch-callout: none;
        /* Prevents iOS long-press context menu */
        -webkit-user-drag: none;
        /* Prevents native element dragging */
    }
}

